place created functions into testGuess function to verify if a guess is a valid guess and render appropriate messaging to screen

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@
     border: 1px solid black;
     height: 5vh;
 }
+#msg {
+    border: 1px solid black;
+    height: 5vh;
+}
 
 .keyboard {
     border: 1px solid black;
